fixed text overflow with long copy

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -58,8 +58,6 @@
     h2 { font-size: 150%; }
     .steps-box:first-child { margin-top: 20px;}
     
-    .long-copy { width: 100%; }
-    
 }
 
 /* SMALL PHONES FROM 0 TO 480px */
